--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,16 +39,20 @@ jobs:
 
       # Build and push Docker image with Buildx
       # https://github.com/docker/build-push-action
-      - name: Build and push
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+      # - name: Build and push
+      #   uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      #   with:
+      #     context: .
+      #     push: true
+      #     tags: ${{ steps.meta.outputs.tags }}
+      #     labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Compute output tag
+        id: compute-tag
+        run: echo "tag=$(echo "${{ steps.meta.outputs.tags }}" | head -1 )" >> "$GITHUB_OUTPUT"
 
     outputs:
-      tags: ${{ steps.meta.outputs.tags }}
+      tag: ${{ steps.compute-tag.outputs.tag }}
 
   deploy:
     name: Deploy image
@@ -81,8 +85,9 @@ jobs:
           url: ${{ secrets.WEBHOOK_URL }}
           headers: '{"X-Token": "${{ secrets.WEBHOOK_TOKEN  }}"}'
           body: >-
-            { "DOCKER_PASSWORD": "${{ secrets.GITHUB_TOKEN }}",
-            "DOCKER_TAG": "${{ needs.build.outputs.tags }}" }
+            { "DOCKER_PASSWORD": "${{ secrets.GITHUB_TOKEN }}", 
+            "DOCKER_PROJECT": "${{ github.event.repository.name }}",
+            "DOCKER_TAG": "${{ needs.build.outputs.tag }}" }
 
       # Server can be slow-ish when it comes to pulling new image
       # GITHUB_TOKEN might expire before server will manage to pull the
