--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,36 +16,34 @@ jobs:
       packages: write
 
     steps:
+      # https://github.com/actions/checkout
       - uses: actions/checkout@v3
 
       # Login against a Docker registry
       # https://github.com/docker/login-action
-      - uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
+      - uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v2
-
       # Extract metadata (tags, labels) for Docker
       # https://github.com/docker/metadata-action
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934
         with:
           images: ghcr.io/${{ github.repository }}
 
       # Build and push Docker image with Buildx
       # https://github.com/docker/build-push-action
-      # - name: Build and push
-      #   uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-      #   with:
-      #     context: .
-      #     push: true
-      #     tags: ${{ steps.meta.outputs.tags }}
-      #     labels: ${{ steps.meta.outputs.labels }}
+      - name: Build and push
+        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
       - name: Compute output tag
         id: compute-tag
@@ -79,6 +77,7 @@ jobs:
         timeout-minutes: 1
         run: until nc -vzw 2 ${{ secrets.SERVER_IP }}; do sleep 2; done
 
+      # https://github.com/joelwmale/webhook-action
       - name: Deploy docker container webhook
         uses: joelwmale/webhook-action@448a17bf857ead98546cfbdbe3b9d4cf979dda95
         with:
@@ -89,24 +88,11 @@ jobs:
             "DOCKER_PROJECT": "${{ github.event.repository.name }}",
             "DOCKER_TAG": "${{ needs.build.outputs.tag }}" }
 
-      # Server can be slow-ish when it comes to pulling new image
-      # GITHUB_TOKEN might expire before server will manage to pull the
-      # new image (that token expires after action is done)
-      # You might want to do some fancy pooling or just slap some
-      # sleep if that's good enough for you
-      # As we're not building a production system here I recommend the latter
-      - name: Sleep for 15 seconds
-        run: sleep 15
-
       - name: Kill VPN connection
         if: always()
         run: |
-          sudo chmod 777 vpn.log
           sudo killall openvpn
 
-      - name: Upload VPN logs
-        uses: actions/upload-artifact@v2
-        if: always()
-        with:
-          name: VPN logs
-          path: vpn.log
+      # Wait for the server to retrieve the image
+      - name: Sleep for 15 seconds
+        run: sleep 15
