--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^6.0.3",
     "@astrojs/tailwind": "^5.0.0",
+    "@resvg/resvg-js": "^2.6.0",
+    "@tailwindcss/typography": "^0.5.10",
     "astro": "^3.0.12",
     "astro-icon": "^0.8.1",
-    "tailwindcss": "^3.3.3"
+    "dompurify": "^3.0.6",
+    "jsdom": "^22.1.0",
+    "node-mailjet": "^6.0.4",
+    "tailwindcss": "^3.3.3",
+    "ultimate-text-to-image": "^1.0.1"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.4",
+    "@types/jsdom": "^21.1.4",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0",
     "prettier-plugin-tailwindcss": "^0.5.4"
