--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,14 @@ jobs:
       # https://github.com/actions/checkout
       - uses: actions/checkout@v3
 
+      # https://github.com/actions/setup-python (required by Canvas)
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
       # Login against a Docker registry
       # https://github.com/docker/login-action
       - uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
