--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
   "dependencies": {
     "@astrojs/node": "^6.0.3",
     "@astrojs/tailwind": "^5.0.0",
-    "@resvg/resvg-js": "^2.6.0",
+    "@napi-rs/canvas": "^0.1.44",
     "@tailwindcss/typography": "^0.5.10",
     "astro": "^3.0.12",
     "astro-icon": "^0.8.1",
     "dompurify": "^3.0.6",
     "jsdom": "^22.1.0",
     "node-mailjet": "^6.0.4",
-    "tailwindcss": "^3.3.3",
-    "ultimate-text-to-image": "^1.0.1"
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.4",
