--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "node -r dotenv/config ./dist/server/entry.mjs",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
@@ -17,6 +17,7 @@
     "astro": "^3.0.12",
     "astro-icon": "^0.8.1",
     "dompurify": "^3.0.6",
+    "dotenv": "^16.3.1",
     "jsdom": "^22.1.0",
     "node-mailjet": "^6.0.4",
     "tailwindcss": "^3.3.3"
